argocd-course/docs/argocd-build/resources/argocd-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    spec.ingressClassName: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: argocd-ingress
  namespace: argocd
spec:
  rules:
  - host: argo.kendopz.com
    http:
      paths:
      - backend:
          service:
            name: argocd
            port:
              name: https
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - argo.kendopz.com
    secretName: argocd-tls-certificate
